feat(data): Service-Schnittstellen kanonisieren. Refs #35
